--- a/src/application/battle/BattleScene.fxml
+++ b/src/application/battle/BattleScene.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.*?>
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
@@ -11,8 +12,6 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
-
-<?import application.battle.board.Board?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.battle.BattleController">
    <children>
@@ -29,14 +28,24 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
       </GridPane>
-      <Label fx:id="takenElephants" layoutX="33.0" layoutY="33.0" onMouseClicked="#onTakenElephantsClicked" text="elephant * 0" />
-      <Label fx:id="tookElephants" layoutX="480.0" layoutY="350.0" onMouseClicked="#onTookElephantsClicked" text="elephant * 0" />
-      <Label fx:id="tookGiraffes" layoutX="487.0" layoutY="310.0" onMouseClicked="#onTookGiraffesClicked" text="giraffe * 0" />
-      <Label fx:id="tookDucks" layoutX="492.0" layoutY="270.0" onMouseClicked="#onTookDucksClicked" text="duck * 0" />
-      <Label fx:id="takenGiraffes" layoutX="39.0" layoutY="73.0" onMouseClicked="#onTakenGiraffesClicked" text="giraffe * 0" />
-      <Label fx:id="takenDucks" layoutX="44.0" layoutY="113.0" onMouseClicked="#onTakenDucksClicked" text="duck * 0" />
+      <Label fx:id="takenElephants" layoutX="33.0" layoutY="33.0" onMouseClicked="#onTakenElephantsClicked" text="elephant * 0" textAlignment="CENTER" />
+      <Label fx:id="tookElephants" layoutX="480.0" layoutY="350.0" onMouseClicked="#onTookElephantsClicked" text="elephant * 0" textAlignment="CENTER" />
+      <Label fx:id="tookGiraffes" layoutX="486.0" layoutY="311.0" onMouseClicked="#onTookGiraffesClicked" text="giraffe * 0" textAlignment="CENTER" />
+      <Label fx:id="tookDucks" layoutX="490.0" layoutY="271.0" onMouseClicked="#onTookDucksClicked" text="duck * 0" textAlignment="CENTER" />
+      <Label fx:id="takenGiraffes" layoutX="39.0" layoutY="75.0" onMouseClicked="#onTakenGiraffesClicked" text="giraffe * 0" textAlignment="CENTER" />
+      <Label fx:id="takenDucks" layoutX="43.0" layoutY="113.0" onMouseClicked="#onTakenDucksClicked" text="duck * 0" textAlignment="CENTER" />
       <Button fx:id="start" layoutX="30.0" layoutY="230.0" mnemonicParsing="false" onMouseClicked="#onStartClicked" prefHeight="20.0" prefWidth="80.0" text="Start" />
       <Button fx:id="back" layoutX="30.0" layoutY="345.0" mnemonicParsing="false" onMouseClicked="#onBackClicked" prefHeight="20.0" prefWidth="80.0" text="Back" />
       <Button fx:id="reset" layoutX="30.0" layoutY="297.0" mnemonicParsing="false" onMouseClicked="#onResetClicked" prefHeight="20.0" prefWidth="80.0" text="Reset" />
+      <Label fx:id="secondPlayerLabel" layoutX="101.0" layoutY="152.0" text="2P" textAlignment="CENTER">
+         <font>
+            <Font name="System Bold" size="15.0" />
+         </font>
+      </Label>
+      <Label fx:id="firstPlayerLabel" layoutX="471.0" layoutY="234.0" text="1P" textAlignment="CENTER">
+         <font>
+            <Font name="System Bold" size="15.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
