--- a/src/application/battle/BattleScene.fxml
+++ b/src/application/battle/BattleScene.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.battle.BattleController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.battle.BattleSceneController">
    <children>
       <GridPane fx:id="board" alignment="CENTER" gridLinesVisible="true" layoutX="165.0" layoutY="50.0" prefHeight="300.0" prefWidth="270.0" style="-fx-background-color: ffffff;">
         <columnConstraints>
