--- a/src/application/battle/BattleScene.fxml
+++ b/src/application/battle/BattleScene.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.battle.BattleSceneController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.battle.view.BattleSceneController">
    <children>
       <GridPane fx:id="board" alignment="CENTER" gridLinesVisible="true" layoutX="165.0" layoutY="50.0" prefHeight="300.0" prefWidth="270.0" style="-fx-background-color: ffffff;">
         <columnConstraints>
@@ -28,13 +28,12 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
       </GridPane>
-      <Label fx:id="takenElephants" layoutX="33.0" layoutY="33.0" onMouseClicked="#onTakenElephantsClicked" text="elephant * 0" textAlignment="CENTER" />
-      <Label fx:id="tookElephants" layoutX="480.0" layoutY="350.0" onMouseClicked="#onTookElephantsClicked" text="elephant * 0" textAlignment="CENTER" />
-      <Label fx:id="tookGiraffes" layoutX="486.0" layoutY="311.0" onMouseClicked="#onTookGiraffesClicked" text="giraffe * 0" textAlignment="CENTER" />
-      <Label fx:id="tookDucks" layoutX="490.0" layoutY="271.0" onMouseClicked="#onTookDucksClicked" text="duck * 0" textAlignment="CENTER" />
-      <Label fx:id="takenGiraffes" layoutX="39.0" layoutY="75.0" onMouseClicked="#onTakenGiraffesClicked" text="giraffe * 0" textAlignment="CENTER" />
-      <Label fx:id="takenDucks" layoutX="43.0" layoutY="113.0" onMouseClicked="#onTakenDucksClicked" text="duck * 0" textAlignment="CENTER" />
-      <Button fx:id="start" layoutX="30.0" layoutY="230.0" mnemonicParsing="false" onMouseClicked="#onStartClicked" prefHeight="20.0" prefWidth="80.0" text="Start" />
+      <Label fx:id="tookDucksOf1P" layoutX="490.0" layoutY="271.0" onMouseClicked="#onTookDucksOf1PClicked" text="Duck * 0" textAlignment="CENTER" />
+      <Label fx:id="tookElephantsOf1P" layoutX="480.0" layoutY="350.0" onMouseClicked="#onTookElephantsOf1PClicked" text="Elephant * 0" textAlignment="CENTER" />
+      <Label fx:id="tookGiraffesOf1P" layoutX="486.0" layoutY="311.0" onMouseClicked="#onTookGiraffesOf1PClicked" text="Giraffe * 0" textAlignment="CENTER" />
+      <Label fx:id="tookDucksOf2P" layoutX="43.0" layoutY="113.0" onMouseClicked="#onTookDucksOf2PClicked" text="Duck * 0" textAlignment="CENTER" />
+      <Label fx:id="tookElephantsOf2P" layoutX="33.0" layoutY="33.0" onMouseClicked="#onTookElephantsOf2PClicked" text="Elephant * 0" textAlignment="CENTER" />
+      <Label fx:id="tookGiraffesOf2P" layoutX="39.0" layoutY="75.0" onMouseClicked="#onTookGiraffesOf2PClicked" text="Giraffe * 0" textAlignment="CENTER" />
       <Button fx:id="back" layoutX="30.0" layoutY="345.0" mnemonicParsing="false" onMouseClicked="#onBackClicked" prefHeight="20.0" prefWidth="80.0" text="Back" />
       <Button fx:id="reset" layoutX="30.0" layoutY="297.0" mnemonicParsing="false" onMouseClicked="#onResetClicked" prefHeight="20.0" prefWidth="80.0" text="Reset" />
       <Label fx:id="secondPlayerLabel" layoutX="101.0" layoutY="152.0" text="2P" textAlignment="CENTER">
