開発中のコメントアウトの除去とかフォーマッタとかしてないけど一旦開発完了？

--- a/src/main/resources/static/battle/battle.css
+++ b/src/main/resources/static/battle/battle.css
@@ -14,6 +14,11 @@ body{
     width: 150px;
 }
 
+.pieceCountOf1P p,
+.pieceCountOf2P p{
+    cursor: pointer;
+}
+
 .center{
     width: 400px;
     vertical-align: middle;
@@ -34,23 +39,32 @@ body{
     border-color: black;
     border-style: solid;
     border-width: 1px;
+    position: relative;
 }
 
 .board td img{
     display: table-cell;
     vertical-align: middle;
     margin: 0 auto;
-    transform: rotate(180deg);
+    position: relative;
+    z-index: 1;
+    cursor: pointer;
 }
 
 .canMovePoint{
+    width: 70px;
+    height: 70px;
     background-color: yellow;
     opacity: 50%;
+    position: absolute;
+    top: 0;
+    z-index: 99;
+    cursor: pointer;
 }
 
 input[type="button"]{
-        display: block;
-        position: relative;
-        size: 60px;
-        margin: 20px auto;
+    display: block;
+    position: relative;
+    size: 60px;
+    margin: 20px auto;
 }
