--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -10,7 +10,7 @@
         <p>Animal Chess for Spring</p>
     </div>
     <div class="body">
-        <form name="menuForm">
+        <form name="menuForm" method="get">
             <input name="battle" type="button" value="battle" onclick="onClickBattle();">
             <input name="config" type="button" value="config" onclick="onConfigClicked();">
         </form>
