--- a/src/main/resources/templates/battle.html
+++ b/src/main/resources/templates/battle.html
@@ -7,79 +7,61 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script type="text/javascript" src="../battle/battle.js"></script>
 </head>
-<body onload="onLoad()">
+<body>
     <form action="#" name="battleForm" th:object="${battleForm}" method="post" >
         <div class="left" >
-            <div class="pieceCountOf2P" th:each="entry : ${pieceCountOf2P}">
-                <p>2P</p>
-                <p>Giraffe * <span th:if="${entry.key == Giraffe}" th:text="${entry.value}" ></span></p>
-                <p>Elephant * <span th:if="${entry.key == Elephant}" th:text="${entry.value}" ></span></p>
-                <p>Duck * <span th:if="${entry.key == Duck}" th:text="${entry.value}" ></span></p>
+            <p>2P</p>
+            <div class="pieceCountOf2P" th:each="entry : *{pieceCountOf2P}">
+                <p th:if="${entry.key} == Giraffe">Giraffe * <span th:text="${entry.value}" ></span></p>
+                <p th:if="${entry.key} == Elephant">Elephant * <span th:text="${entry.value}" ></span></p>
+                <p th:if="${entry.key} == Duck">Duck * <span th:text="${entry.value}" ></span></p>
             </div>
-            <input id="reset" type="button" value="reset">
-            <input id="back" type="button" value="back">
+            <input type="button" value="reset" onclick="init();">
+            <input type="button" value="back" onclick="back();">
         </div>
         <div class="center">
-            <script th:inline="javascript" th:each="entry : ${pieceOnBoard}" >
-            const imagePath = "../pieceImage/" + [[${entry.value}]] + ".jpeg";
-            const img = $("<img>", {
-                alt="",
-                src: imagePath,
-                on: {
-                    click: function(event){
-                        document.battleForm.action = "/battle/clickedPiece";
-                        document.battleForm.submit();
-                    }
-                }
-            });
-            $("#" + entry.key).append(img);
-            </script>
-            <script th:inline="javascript" th:each="point : ${canMovePoints}" >
-            const div = $("<div></div>", {
-                class: canMovePoint,
-                on: {
-                    click: function(event){
-                        documetn.battleForm.action = "/battle/clickedCanMovePoint";
-                        document.battleForm.submit();
-                    }
-                }
-            });
-            $("#" + point).append(div);
-            </script>
             <table class="board" >
-                <tbody>
-                    <tr>
-                        <td id="0-0"></td>
-                        <td id="1-0"></td>
-                        <td id="2-0"></td>
-                    </tr>
-                    <tr>
-                        <td id="0-1"></td>
-                        <td id="1-1"></td>
-                        <td id="2-1"></td>
-                    </tr>
-                    <tr>
-                        <td id="0-2"></td>
-                        <td id="1-2"></td>
-                        <td id="2-2"></td>
-                    </tr>
-                    <tr>
-                        <td id="0-3"></td>
-                        <td id="1-3"></td>
-                        <td id="2-3"></td>
-                    </tr>
-                </tbody>
+                <tr>
+                    <td id="0-0"></td>
+                    <td id="1-0"></td>
+                    <td id="2-0"></td>
+                </tr>
+                <tr>
+                    <td id="0-1"></td>
+                    <td id="1-1"></td>
+                    <td id="2-1"></td>
+                </tr>
+                <tr>
+                    <td id="0-2"></td>
+                    <td id="1-2"></td>
+                    <td id="2-2"></td>
+                </tr>
+                <tr>
+                    <td id="0-3"></td>
+                    <td id="1-3"></td>
+                    <td id="2-3"></td>
+                </tr>
             </table>
         </div>
         <div class="right" >
-            <div class="pieceCountOf1P" th:each="entry : ${pieceCountOf1P}">
-                <p>1P</p>
-                <p>Giraffe * <span th:if="${entry.key == Giraffe}" th:text="${entry.value}" ></span></p>
-                <p>Elephant * <span th:if="${entry.key == Elephant}" th:text="${entry.value}" ></span></p>
-                <p>Duck * <span th:if="${entry.key == Duck}" th:text="${entry.value}" ></span></p>
+            <p>1P</p>
+            <div class="pieceCountOf1P" th:each="entry : *{pieceCountOf1P}">
+                <p th:if="${entry.key} == Giraffe">Giraffe * <span th:text="${entry.value}" ></span></p>
+                <p th:if="${entry.key} == Elephant">Elephant * <span th:text="${entry.value}" ></span></p>
+                <p th:if="${entry.key} == Duck">Duck * <span th:text="${entry.value}" ></span></p>
             </div>
         </div>
+        <input type="hidden" name="is1PlayerTurn" th:field="*{is1PlayerTurn}">
+        <input type="hidden" name="winer" th:field="*{winer}">
+        <script th:inline="javascript" th:each="entry : *{pieceOnBoard}" >
+        putPieceImage([[${entry.value}]], [[${entry.key}]]);
+        </script>
+        <script th:inline="javascript" th:each="point : *{canMovePoints}" >
+        putCanMovePoint([[${point}]]);
+        </script>
+        <script th:inline="javascript" >
+        gameSet([[*{winer}]]);
+        </script>
     </form>
 </body>
-<input type="hidden" name="is1PlayerTurn">
 </html>
