--- a/src/main/resources/templates/battle.html
+++ b/src/main/resources/templates/battle.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Animal Chess - Battle</title>
-    <link rel="stylesheet" href="../battle/battle.css">
+    <link rel="stylesheet" href="/css/battle.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script type="text/javascript" src="../battle/battle.js"></script>
+    <script type="text/javascript" src="/js/battle.js"></script>
 </head>
 <body>
     <form action="#" name="battleForm" th:object="${battleForm}" method="post" >
